# autochessboard

./: .gitignore  Cargo.toml  README.md  fmod  package-lock.json  package.json
.cargo/: config.toml
src/: api.rs  chess.rs  index.html  lichess.js  lichess_node.js  main.rs
src/autochessboard/: CMakeLists.txt  Cargo.toml  package.xml
src/autochessboard/.cargo/: config.toml
src/autochessboard/msg/: BoardGradient.msg
src/autochessboard/scripts/: receive_sensor_updates.py
src/autochessboard/src/: chess.rs  lichess.js  lichess.rs  main.rs  msg.rs  package-lock.json  read_board_sensors.txt
src/board_arm_control/: CMakeLists.txt  Cargo.toml  package.xml
src/board_arm_control/config/: board_arm_control.yaml
src/board_arm_control/launch/: board_arm_control.launch
src/board_arm_control/msg/: JointConfiguration.msg  LatticeCoordinate.msg
src/board_arm_control/scripts/: client.py  gpio_motor_control.py  traj_gen.py
src/board_arm_control/src/: compute_path.cpp  main.rs  msg.rs
src/board_arm_control/srv/: FindLatticePath.srv  GenerateTrajectory.srv  MakeMove.srv
src/board_control/: CMakeLists.txt  Cargo.toml  package.xml
src/board_control/src/: main.rs
src/chess/src/: lib.rs  tests.rs
src/lichess_api/: CMakeLists.txt  package.xml
src/lichess_api/msg/: Challenge.msg  ChallengeEvent.msg  Challenger.msg  Compatability.msg  GameDef.msg  GameEvent.msg  GameEventGame.msg  GameState.msg  Player.msg
src/lichess_api/scripts/: client_node.js  lichess.js  package.json  t.js
src/simulation/: CMakeLists.txt  Cargo.toml  package.xml
(+17 files in other folders)
