[package]
name = "autochessboard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rosrust = "0.9"
rosrust_msg = "0.1"
repl-rs = "0.2"
